--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,11 @@
 	</properties>
 
 	<dependencies>
-
+<dependency>
+			<groupId>com.toedter</groupId>
+			<artifactId>jcalendar</artifactId>
+			<version>1.4</version>
+		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -24,16 +28,12 @@
     <artifactId>itextpdf</artifactId>
     <version>5.5.13</version>
 </dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>5.4.2.Final</version>
 		</dependency>
 	</dependencies>
 </project>
